# homorg

./: .env.example  .gitignore  Architectural Blueprint for a Massive-Scale, High-Velocity Personal Inventory System.md  BluetoothScanner.java  CLAUDE.md  Cargo.toml  Dockerfile  E2E-TESTING-PLAN.md  HANDOFF.md  PRODUCTION-DEPLOY.md  README.md  SECURITY-ROADMAP.md  clippy.toml  docker-compose.yml  rustfmt.toml  sent.tex
.cargo/: config.toml
.claude/: AUTONOMOUS-REVIEW.md
.github/prompts/: plan-homorgPhaseOneBackend.prompt.md
.github/workflows/: ci.yml
docker/: init-extensions.sql
migrations/: 0001_extensions.sql  0002_users.sql  0003_items.sql  0004_event_store.sql  0005_barcode_sequences.sql  0006_scan_sessions.sql  0007_refresh_tokens.sql  0008_schema_improvements.sql  0009_integrity_and_extensibility.sql  0010_refresh_token_reuse_detection.sql  0011_performance_and_integrity.sql  0012_optional_barcodes.sql  0013_container_types.sql  0014_container_fungible_tables.sql  0015_tags_and_categories.sql  0016_schema_cleanup.sql  0017_stocker_workflow_improvements.sql  0018_system_actor.sql  0019_partial_barcode_unique.sql  0020_fix_users_container_fk.sql  0021_camera_tokens.sql  0022_barcode_presets.sql  0023_missing_indexes.sql  0024_barcode_sequence_check.sql  0025_enrichment_queue.sql  0026_ai_suggestions.sql  0027_photo_needed.sql
mobile/: .flutter-plugins  README.md  build  pubspec.yaml
mobile/android/: build.gradle.kts
mobile/android/app/: build.gradle.kts
mobile/ios/Runner/: Info.plist
mobile/ios/Runner.xcodeproj/: project.pbxproj
mobile/lib/: main.dart
mobile/lib/models/: auth.dart  camera_models.dart  item.dart  session.dart
mobile/lib/screens/: barcode_sheet.dart  browse_screen.dart  camera_capture_screen.dart  connect_screen.dart  container_picker_sheet.dart  (+11 more)
mobile/linux/: CMakeLists.txt
mobile/test/: widget_test.dart
mobile/web/: index.html  manifest.json
mobile/windows/: CMakeLists.txt
scripts/: build-android.sh  dev-reset.sh  reset-db.sh  seed.py  setup-build-volume.sh
src/: cache.rs  config.rs  constants.rs  db.rs  errors.rs  label_gen.rs  lib.rs  main.rs  metrics.rs  openapi.rs  storage.rs
src/api/: auth_routes.rs  barcode_routes.rs  category_routes.rs  container_routes.rs  container_type_routes.rs  enrichment_routes.rs  export_routes.rs  item_routes.rs  mod.rs  search_routes.rs  stocker_routes.rs  system_routes.rs  tag_routes.rs  undo_routes.rs  user_routes.rs
src/auth/: jwt.rs  middleware.rs  mod.rs  password.rs
src/commands/: barcode_commands.rs  item_commands.rs  mod.rs  undo_commands.rs
src/enrichment/: claude_cli.rs  dispatch.rs  input_builder.rs  mod.rs  provider.rs
src/events/: mod.rs  projector.rs  store.rs
src/models/: barcode.rs  camera.rs  container_type.rs  enrichment.rs  event.rs  item.rs  mod.rs  session.rs  taxonomy.rs  user.rs
src/queries/: common.rs  container_queries.rs  container_type_queries.rs  enrichment_queries.rs  item_queries.rs  mod.rs  search_queries.rs  session_queries.rs  stats_queries.rs  taxonomy_queries.rs  token_queries.rs  user_queries.rs
templates/: labels-30up.tex.j2  labels-80up.tex.j2  labels.tex.j2
tests/: barcode_tests.rs  container_type_tests.rs  event_store_tests.rs  item_command_tests.rs  query_tests.rs  search_edge_tests.rs  stocker_session_tests.rs  taxonomy_tests.rs  undo_tests.rs  user_tests.rs
tests/common/: mod.rs
web/: package-lock.json  package.json  playwright.config.ts  svelte.config.js  tsconfig.json  vite.config.ts
web/e2e/: admin-container-types.spec.ts  admin-tags.spec.ts  admin-users.spec.ts  admin.spec.ts  auth.setup.ts  auth.spec.ts  browse.spec.ts  constants.ts  error-paths.spec.ts  fixtures.ts  global.setup.ts  item-detail.spec.ts  journal.spec.ts  search.spec.ts  smoke.spec.ts  stocker-lifecycle.spec.ts  stocker-scan.spec.ts  stocker.spec.ts
web/src/: ambient.d.ts  app.css  app.html
web/static/: manifest.webmanifest
(+85 files in other folders)
