[package]
name = "homorg"
version = "0.1.0"
edition = "2021"
description = "Event-sourced personal inventory management system"
license = "MIT"

[dependencies]
# Web framework
axum = { version = "0.8", features = ["multipart", "macros"] }
tower = { version = "0.5", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "trace", "compression-gzip", "fs", "request-id", "propagate-header", "set-header", "timeout"] }
tower_governor = "0.8"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"

# Database
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "tls-rustls",
    "postgres",
    "uuid",
    "chrono",
    "json",
    "migrate",
    "rust_decimal",
] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Auth
jsonwebtoken = "9"
argon2 = "0.5"
sha2 = "0.10"
rand = "0.8"

# Types
uuid = { version = "1", features = ["v4", "v5", "v7", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Configuration
dotenvy = "0.15"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Metrics
metrics = "0.24"
metrics-exporter-prometheus = { version = "0.16", default-features = false }

# OpenAPI
utoipa = { version = "5", features = ["axum_extras", "uuid", "chrono"] }
utoipa-swagger-ui = { version = "9", features = ["axum"] }

# Object storage (optional — enable with --features s3)
rust-s3 = { version = "0.35", optional = true, default-features = false, features = ["tokio-rustls-tls"] }

# Caching
moka = { version = "0.12", features = ["future"] }

# Utilities
thiserror = "2"
hex = "0.4"
async-trait = "0.1"
rust_decimal = { version = "1", features = ["serde-with-str"] }
# File magic-bytes detection (SEC-4/SEC-5)
infer = "0.16"
# Label PDF generation
minijinja = "2"
tempfile = "3"

[features]
default = []
s3 = ["dep:rust-s3"]

[dev-dependencies]
tokio = { version = "1", features = ["test-util", "macros", "rt"] }
testcontainers = "0.23"
testcontainers-modules = { version = "0.11", features = ["postgres"] }

[profile.release]
opt-level = 3
lto = true
strip = true
